--- a/index.html
+++ b/index.html
@@ -402,10 +402,7 @@ An alumnus of HBTI Kanpur, REC Kurukshetra, and IIT Kanpur, Prof. Jitendra Kumar
                             <h5 class="display-6" style="text-align: left;">Prof. Dinesh Kumar Shrivastav</h5>
                             <h2 style="color: rgb(0, 0, 0);text-align: left;">President</h2>
                             <p class="text-hover" style="text-align:justify">
-                                Prof. D. K. Srivastava is a senior faculty member in the Department of Electronics and Communication Engineering at BIET, Jhansi. He earned his B.Tech and M.Tech in Electronics Engineering from the University of Allahabad and completed his Ph.D. from Uttarakhand Technical University, Dehradun.
-                                Since joining BIET in 1999, he has been serving as a Professor since 2015. He teaches key subjects such as Digital Electronics, Digital Communication, Analog Communication, Optical Communication, Network Analysis & Synthesis, and Information Theory. 
-                                His research areas include Microwave Engineering, Microstrip Antennas, Optical Communication, and Sensor Technologies. He has published several impactful papers in reputed international journals indexed in SCI, Scopus, and others, including Wireless Personal Communications, Applied Physics A, and Photonic Sensors. 
-                                Prof. Srivastava also holds major responsibilities such as Dean (Planning), President of the Institute Innovation Council, Convenor of the Innovation and Incubation Centre, Director of BIICF, Coordinator of the Swami Vivekananda Digishakti Yojna, Organizing Chair of Hackathon, and PG Coordinator of the ECE Department.
+                                Prof. D. K. Srivastava is a senior faculty member in the Department of Electronics and Communication Engineering at BIET, Jhansi having more than 26 years of rxperience.His research areas include Microwave Engineering, Microstrip Antennas, Optical Communication, and Sensor Technologies. He has published several impactful research articles in reputed international journals indexed in SCI, Scopus, and others. In addition to IIC,      Prof. Srivastava also holds major responsibilities such as Dean (Planning), Convenor of the Innovation and Incubation Centre, Director of BIICF Coordinator of the Swami Vivekananda Digishakti Yojna, Organizing Chair of Hackathon, and PG Coordinator of the ECE Department.
                             </p>
                         </div>
                     </div>
@@ -436,8 +433,7 @@ An alumnus of HBTI Kanpur, REC Kurukshetra, and IIT Kanpur, Prof. Jitendra Kumar
 
                         </div>
                     </div>
-                </div>
-                
+                </div>                
             </div>
              <div class="glass-morphism row g-5" style="margin-top: 50px; padding: 2em;">
                 <div class="col-lg-6 wow" data-wow-delay="0.1s">
