Update in  index.html
DKS sir content update

--- a/index.html
+++ b/index.html
@@ -399,10 +399,10 @@ An alumnus of HBTI Kanpur, REC Kurukshetra, and IIT Kanpur, Prof. Jitendra Kumar
                 <div class="col-lg-6 wow" data-wow-delay="0.1s">
                     <div class="position-relative overflow-hidden h-100" style="min-height: 300px; text-align: center;">
                         <div class="h-100" style="padding-top:10px;">
-                            <h5 class="display-6" style="text-align: left;">Prof. Dinesh Kumar Shrivastav</h5>
+                            <h5 class="display-6" style="text-align: left;">Prof. Dinesh Kumar Srivastava</h5>
                             <h2 style="color: rgb(0, 0, 0);text-align: left;">President</h2>
                             <p class="text-hover" style="text-align:justify">
-                                Prof. D. K. Srivastava is a senior faculty member in the Department of Electronics and Communication Engineering at BIET, Jhansi having more than 26 years of rxperience.His research areas include Microwave Engineering, Microstrip Antennas, Optical Communication, and Sensor Technologies. He has published several impactful research articles in reputed international journals indexed in SCI, Scopus, and others. In addition to IIC,      Prof. Srivastava also holds major responsibilities such as Dean (Planning), Convenor of the Innovation and Incubation Centre, Director of BIICF Coordinator of the Swami Vivekananda Digishakti Yojna, Organizing Chair of Hackathon, and PG Coordinator of the ECE Department.
+                                Prof. D. K. Srivastava is a senior faculty member in the Department of Electronics and Communication Engineering at BIET, Jhansi having more than 26 years of experience. His research areas include Microwave Engineering, Microstrip Antennas, Optical Communication, and Sensor Technologies. He has published several impactful research articles in reputed international journals indexed in SCI, Scopus, and others. In addition to IIC, Prof. Srivastava also holds major responsibilities such as Dean (Planning), Convenor of the Innovation and Incubation Centre, Director of BIICF, Coordinator of the Swami Vivekananda Digishakti Yojna, Organizing Chair of Hackathon, and PG Coordinator of the ECE Department.
                             </p>
                         </div>
                     </div>
