--- a/training/index.html
+++ b/training/index.html
@@ -57,8 +57,8 @@
                     <div class="intro">
                         <h6>Trainings</h6>
                         <h1 style="color: aliceblue;">Trainings We Provide</h1>
-                        <p class="mx-auto">Contrary to popular belief, Lorem Ipsum is not simply random text. It has
-                            roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old</p>
+                        <p class="mx-auto">Empowering innovators through dynamic training in entrepreneurship, prototyping, design thinking, pitching,
+                            and more—equipping you with real-world skills to transform bold ideas into thriving, investor-ready startups. </p>
                     </div>
                 </div>
             </div>
