--- a/index.html
+++ b/index.html
@@ -434,12 +434,12 @@ Beyond his teaching and research roles, he had served as the Assistant Dean Acad
                         style=" margin-top:-20px;margin-left: 100px; width: 70%; border-radius: 1000px;border: 1px solid rgb(0, 0, 0);">
                 </div>
             </div>
-              <div class=" glass-morphism row g-5" style="margin-top: 50px; padding: 2em;">
+<!--               <div class=" glass-morphism row g-5" style="margin-top: 50px; padding: 2em;">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <img src="img/home/AtulSir.png"
                         style=" margin-top:-20px;margin-right: 100px; width: 70%; border-radius: 1000px;border: 1px solid rgb(0, 0, 0); ;">
                 </div>
-                <div class="col-lg-6 wow " data-wow-delay="0.1s">
+                     <div class="col-lg-6 wow " data-wow-delay="0.1s">
                     <div class="position-relative overflow-hidden h-100" style="min-height: 300px; text-align: center;">
                         <div class="h-100" style="padding-top:10px;">
                             <h5 class="display-6" style="text-align: right;">Prof. Dr. Atul Kumar Dwivedi</h5>
@@ -454,8 +454,8 @@ Beyond his teaching and research roles, he had served as the Assistant Dean Acad
 
                         </div>
                     </div>
-                </div>                
-            </div>
+                </div>                 
+            </div> -->
             <!-- <div class=" glass-morphism row g-5" style="margin-top: 50px; padding: 2em;">
 
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
@@ -790,3 +790,4 @@ Beyond his teaching and research roles, he had served as the Assistant Dean Acad
 </body>
 
 </html>
+
