--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@ Beyond his teaching and research roles, he had served as the Assistant Dean Acad
                         style=" margin-top:-20px;margin-left: 100px; width: 70%; border-radius: 1000px;border: 1px solid rgb(0, 0, 0);">
                 </div>
             </div>
-<!--               <div class=" glass-morphism row g-5" style="margin-top: 50px; padding: 2em;">
+            <div class=" glass-morphism row g-5" style="margin-top: 50px; padding: 2em;">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <img src="img/home/AtulSir.png"
                         style=" margin-top:-20px;margin-right: 100px; width: 70%; border-radius: 1000px;border: 1px solid rgb(0, 0, 0); ;">
@@ -455,7 +455,7 @@ Beyond his teaching and research roles, he had served as the Assistant Dean Acad
                         </div>
                     </div>
                 </div>                 
-            </div> -->
+            </div>
             <!-- <div class=" glass-morphism row g-5" style="margin-top: 50px; padding: 2em;">
 
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
@@ -790,4 +790,5 @@ Beyond his teaching and research roles, he had served as the Assistant Dean Acad
 </body>
 
 </html>
+
 
