--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
                 <div class="row g-5">
                     <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="position-relative overflow-hidden h-100" style="min-height: 400px;">
-                            <img class="position-absolute " style="width:100%; border-radius:5px" src="img/team_2024.jpg"
+                            <img class="position-absolute " style="width:100%; border-radius:5px" src="img/team_2024.jpeg"
                                 alt="" style="object-fit: cover;">
 
                         </div>
@@ -2460,4 +2460,5 @@ I am from Gorakhpur and currently I'm pursuing B. Tech. degree in  Electrical En
 </body>
 
 </html>
+
 
