--- a/about.html
+++ b/about.html
@@ -187,6 +187,7 @@
                     </div>
                 </div>
             </div>
+        </div>
             <div class="container">
                 <h1 class=" teams_name"><span style="color: rgb(255,122,0);">Advisory</span> Board Members</h1>
                 <div class="row justify-content-center text-center">
@@ -586,8 +587,6 @@
 
                         </div>
                     </div>
-
-
                 </div>
             </div>
     </div>
@@ -2468,6 +2467,7 @@
 </body>
 
 </html>
+
 
 
 
