--- a/about.html
+++ b/about.html
@@ -519,6 +519,52 @@
                 </div>
             </div>
     </div>
+    <!-- Team Heads Section Start -->
+<div class="container" style="margin-top:80px">
+    <h1 class="teams_name"><span style="color: rgb(255,122,0);">Team</span> Heads</h1>
+    <div class="row justify-content-center text-center">
+        <div class="">
+            <div class="owl-carousel owl-theme" id="staff_heads">
+
+                <!-- Team Head Card Starts -->
+                <div class="item">
+                    <div class="box-b staff">
+                        <div class="team_card" style="text-align: center; padding-top: 15px;">
+                            <br><br><br><br><br><br>
+                            <div class="team_desc" style="height:360px">
+                                <img class="team_DP"
+                                     style="width: 200px; margin-left: 20%; object-fit: cover; height: 200px;"
+                                     src="img/team/team_heads/example.jpg">
+                                <t class="team_name">John Doe</t>
+                                <br>
+                                <t class="team_post">Head of Innovation & Research</t>
+                                <p class="team_about" style="text-align: justify;">
+                                    A creative and dedicated professional passionate about driving innovation,
+                                    research, and collaboration within the team.
+                                </p>
+                                <div class="team_social">
+                                    <button onclick="location.href='https://linkedin.com/'" class="team_btn">
+                                        <i class="fab fa-linkedin-in ico"></i>
+                                    </button>
+                                    <button onclick="location.href='https://instagram.com/'" class="team_btn">
+                                        <i class="fab fa-instagram ico"></i>
+                                    </button>
+                                    <button onclick="location.href='https://github.com/'" class="team_btn">
+                                        <i class="fab fa-github ico"></i>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Team Head Card Ends -->
+
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Team Heads Section End -->
+
     <div class="container" style="margin-top:80px">
         <h1 class=" teams_name"><span style="color: rgb(255,122,0);">Executive</span> Members</h1>
         <div class="row justify-content-center text-center">
@@ -2396,6 +2442,7 @@
 </body>
 
 </html>
+
 
 
 
