--- a/about.html
+++ b/about.html
@@ -524,7 +524,7 @@
     <h1 class="teams_name"><span style="color: rgb(255,122,0);">Team</span> Heads</h1>
     <div class="row justify-content-center text-center">
         <div class="">
-            <div class="owl-carousel owl-theme" id="staff_heads">
+            <div class="owl-carousel owl-theme" id="staff">
 
                 <!-- Team Head Card Starts -->
                 <div class="item">
@@ -534,7 +534,7 @@
                             <div class="team_desc" style="height:360px">
                                 <img class="team_DP"
                                      style="width: 200px; margin-left: 20%; object-fit: cover; height: 200px;"
-                                     src="img/team/team_heads/example.jpg">
+                                     src="img/">
                                 <t class="team_name">John Doe</t>
                                 <br>
                                 <t class="team_post">Head of Innovation & Research</t>
@@ -2438,28 +2438,13 @@
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
     <script src="js/team.js"></script>
-    <script>
-$(document).ready(function(){
-    $('#staff_heads').owlCarousel({
-        loop: true,
-        margin: 10,
-        nav: true,
-        autoplay: true,
-        autoplayTimeout: 3000,
-        autoplayHoverPause: true,
-        responsive: {
-            0: { items: 1 },
-            600: { items: 2 },
-            1000: { items: 3 }
-        }
-    });
-});
-</script>
+    
 
 
 </body>
 
 </html>
+
 
 
 
