--- a/about.html
+++ b/about.html
@@ -118,39 +118,66 @@
         <section class="team">
              <!--TE-->
             <div class="container" style="margin-top:20px">
-            <h1 class=" teams_name"><span style="color: rgb(255,122,0);">Team</span> Heads</h1>
-            <div class="row justify-content-center text-center">
-                <div class="">
-                    <div class="owl-carousel owl-theme" id="staff_heads">
-                        <div class="item">
-                            <div class="box-b staff">
-                                <div class="team_card" style="text-align: center;padding-top: 15px;">
-                                    <br><br><br><br><br><br>
-                                    <div class="team_desc" style="height:360px">
-                                        <img class="team_DP"
-                                            style="width: 200px; margin-left: 20%; object-fit: cover; height: 200px;"
-                                            src="img/team/image_of_team_head_1.jpg">
-                                        <t class="team_name">Team Head Name 1</t>
-                                        <br>
-                                        <t class="team_post">Head of [Department Name]</t>
-                                        <p class="team_about" style="text-align: justify;">
-                                            Brief description of Team Head 1 and their role/skills. Keep it concise for a clean look.
-                                        </p>
-                                        <div class="team_social">
-                                            <button class="team_btn"><i class="fab fa-linkedin-in ico"></i></button>
-                                            <button class="team_btn"><i class="fab fa-facebook ico"></i></button>
-                                            <button class="team_btn"><i class="fab fa-instagram  ico"></i></button>
-                                            <button class="team_btn"><i class="fab fa-github  ico"></i></button>
+                <h1 class=" teams_name"><span style="color: rgb(255,122,0);">Team</span> Heads</h1>
+                    <div class="row justify-content-center text-center">
+                        <div class="">
+                            <div class="owl-carousel owl-theme" id="staff_heads">
+                                <div class="item">
+                                    <div class="box-b staff">
+                                        <div class="team_card" style="text-align: center;padding-top: 15px;">
+                                            <br><br><br><br><br><br>
+                                            <div class="team_desc" style="height:360px">
+                                                <img class="team_DP"
+                                                    style="width: 200px; margin-left: 20%; object-fit: cover; height: 200px;"
+                                                    src="img/team/image_of_team_head_1.jpg">
+                                                <t class="team_name">Team Head Name 1</t>
+                                                <br>
+                                                <t class="team_post">Head of [Department Name]</t>
+                                                <p class="team_about" style="text-align: justify;">
+                                                    Brief description of Team Head 1 and their role/skills. Keep it concise for a clean look.
+                                                </p>
+                                                <div class="team_social">
+                                                    <button class="team_btn"><i class="fab fa-linkedin-in ico"></i></button>
+                                                    <button class="team_btn"><i class="fab fa-facebook ico"></i></button>
+                                                    <button class="team_btn"><i class="fab fa-instagram  ico"></i></button>
+                                                    <button class="team_btn"><i class="fab fa-github  ico"></i></button>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                        </div>
+                                
+                                <!--Head2-->
+                                <div class="item">
+                                    <div class="box-b staff">
+                                        <div class="team_card" style="text-align: center;padding-top: 15px;">
+                                            <br><br><br><br><br><br>
+                                            <div class="team_desc" style="height:360px">
+                                                <img class="team_DP"
+                                                    style="width: 200px; margin-left: 20%; object-fit: cover; height: 200px;"
+                                                    src="img/team/image_of_team_head_1.jpg">
+                                                <t class="team_name">Team Head Name 1</t>
+                                                <br>
+                                                <t class="team_post">Head of [Department Name]</t>
+                                                <p class="team_about" style="text-align: justify;">
+                                                    Brief description of Team Head 1 and their role/skills. Keep it concise for a clean look.
+                                                </p>
+                                                <div class="team_social">
+                                                    <button class="team_btn"><i class="fab fa-linkedin-in ico"></i></button>
+                                                    <button class="team_btn"><i class="fab fa-facebook ico"></i></button>
+                                                    <button class="team_btn"><i class="fab fa-instagram  ico"></i></button>
+                                                    <button class="team_btn"><i class="fab fa-github  ico"></i></button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                         
                     </div>
                 </div>
             </div>
         </div>
+            <hr>
             <div class="container">
                 <h1 class=" teams_name"><span style="color: rgb(255,122,0);">Advisory</span> Board Members</h1>
                 <div class="row justify-content-center text-center">
@@ -2384,7 +2411,7 @@
 
 
     </section>
-
+    </div>
 
 
 
@@ -2428,6 +2455,7 @@
 </body>
 
 </html>
+
 
 
 
