--- a/about.html
+++ b/about.html
@@ -178,7 +178,7 @@
             </div>
         </div>
             
-            <div class="container">
+            <div class="container" style="margin-top:80px">
                 <h1 class=" teams_name"><span style="color: rgb(255,122,0);">Advisory</span> Board Members</h1>
                 <div class="row justify-content-center text-center">
                     <div class="">
@@ -2455,6 +2455,7 @@
 </body>
 
 </html>
+
 
 
 
