--- a/about.html
+++ b/about.html
@@ -129,19 +129,26 @@
                                             <div class="team_desc" style="height:360px">
                                                 <img class="team_DP"
                                                     style="width: 200px; margin-left: 20%; object-fit: cover; height: 200px;"
-                                                    src="img/team/image_of_team_head_1.jpg">
-                                                <t class="team_name">Team Head Name 1</t>
+                                                    src="img/team/Head01.jpeg">
+                                                <t class="team_name">Prajjwal Jaiswal</t>
                                                 <br>
-                                                <t class="team_post">Head of [Department Name]</t>
+                                                <t class="team_post">Head of Research & Development Team</t>
                                                 <p class="team_about" style="text-align: justify;">
-                                                    Brief description of Team Head 1 and their role/skills. Keep it concise for a clean look.
+                                                    I’m Prajjwal Jaiswal, Head of R&D at the Innovation and Incubation Cell, BIET Jhansi. 
+                                                    I drive innovation, lead research projects, and mentor teams to turn ideas into practical solutions.
+                                                    Passionate about technology and creativity, I focus on fostering collaboration, learning,
+                                                    and impactful development.
                                                 </p>
-                                                <div class="team_social">
-                                                    <button class="team_btn"><i class="fab fa-linkedin-in ico"></i></button>
-                                                    <button class="team_btn"><i class="fab fa-facebook ico"></i></button>
-                                                    <button class="team_btn"><i class="fab fa-instagram  ico"></i></button>
-                                                    <button class="team_btn"><i class="fab fa-github  ico"></i></button>
-                                                </div>
+                                            <div class="team_social">
+                                                <button onclick="location.href='http://www.linkedin.com/in/prajjwal-jaiswal' " class="team_btn"><i
+                                                        class="fab fa-linkedin-in ico"></i></button>
+                                                <button onclick="location.href='' " class="team_btn"><i
+                                                        class="fab fa-facebook ico"></i></button>
+                                                <button onclick="location.href='https://www.instagram.com/prajjwal_jaiswal06?igsh=NGZlaXE5Mjd4bXpi' " class="team_btn"><i
+                                                        class="fab fa-instagram  ico"></i></button>
+                                                <button onclick="location.href='https://github.com/Prajjwaljai' " class="team_btn"><i
+                                                        class="fab fa-github  ico"></i></button>
+                                            </div>
                                             </div>
                                         </div>
                                     </div>
@@ -2455,6 +2462,7 @@
 </body>
 
 </html>
+
 
 
 
