--- a/about.html
+++ b/about.html
@@ -129,7 +129,7 @@
                                             <div class="team_desc" style="height:360px">
                                                 <img class="team_DP"
                                                     style="width: 200px; margin-left: 20%; object-fit: cover; height: 200px;"
-                                                    src="img/team/Head01.jpeg">
+                                                    src="img/team/team_Head_2025/Head01.jpeg">
                                                 <t class="team_name">Prajjwal Jaiswal</t>
                                                 <br>
                                                 <t class="team_post">Head of Research & Development Team</t>
@@ -2462,6 +2462,7 @@
 </body>
 
 </html>
+
 
 
 
