--- a/about.html
+++ b/about.html
@@ -134,10 +134,9 @@
                                                 <br>
                                                 <t class="team_post">Head of Research & Development Team</t>
                                                 <p class="team_about" style="text-align: justify;">
-                                                    I’m Prajjwal Jaiswal, Head of R&D at the Innovation and Incubation Cell, BIET Jhansi. 
-                                                    I drive innovation, lead research projects, and mentor teams to turn ideas into practical solutions.
-                                                    Passionate about technology and creativity, I focus on fostering collaboration, learning,
-                                                    and impactful development.
+                                                    I’m Prajjwal Jaiswal, Head of Research and Development at the Innovation and Incubation Cell, BIET Jhansi.
+                                                    I lead innovative projects, organize hackathons, manage collaborations, and mentor teams, inspiring them to turn ideas into impactful,
+                                                    real-world solutions.
                                                 </p>
                                             <div class="team_social">
                                                 <button onclick="location.href='http://www.linkedin.com/in/prajjwal-jaiswal' " class="team_btn"><i
@@ -2462,6 +2461,7 @@
 </body>
 
 </html>
+
 
 
 
