--- a/about.html
+++ b/about.html
@@ -134,8 +134,8 @@
                                                 <br>
                                                 <t class="team_post">Head of Research & Development Team</t>
                                                 <p class="team_about" style="text-align: justify;">
-                                                    I’m Prajjwal Jaiswal, Head of Research and Development at the Innovation and Incubation Cell, BIET Jhansi.
-                                                    I lead innovative projects, organize hackathons, manage collaborations, and mentor teams, inspiring them to turn ideas into impactful,
+                                                    I’m Prajjwal Jaiswal, Head of R&D at Innovation and Incubation Cell, BIET Jhansi. 
+                                                    I lead innovative projects, mentor teams, and drive collaborations to turn ideas into impactful,
                                                     real-world solutions.
                                                 </p>
                                             <div class="team_social">
@@ -2461,6 +2461,7 @@
 </body>
 
 </html>
+
 
 
 
