--- a/about.html
+++ b/about.html
@@ -310,25 +310,24 @@
                                             <div class="team_desc" style="height:360px">
                                                 <img class="team_DP"
                                                     style="width: 200px; margin-left: 20%; object-fit: cover; height: 200px;"
-                                                    src="img/team/team_Head_2025/Head01.jpeg">
-                                                <t class="team_name">Prajjwal Jaiswal</t>
+                                                    src="img/team/team_Head_2025/Head07.jpeg">
+                                                <t class="team_name">Harsh Kumar Kushwaha</t>
                                                 <br>
-                                                <t class="team_post">Head of Research & Development Team</t>
+                                                <t class="team_post">Head of Idea Incubators Team</t>
                                                 <p class="team_about" style="text-align: justify;">
-                                                    I’m Prajjwal Jaiswal, Head of R&D at Innovation and Incubation Cell, BIET Jhansi. 
-                                                    I lead innovative projects, mentor teams, and drive collaborations to turn ideas into impactful,
-                                                    real-world solutions.
+                                                    I’m Harsh...
                                                 </p>
                                             <div class="team_social">
-                                                <button onclick="location.href='http://www.linkedin.com/in/prajjwal-jaiswal' " class="team_btn"><i
+                                                <button onclick="location.href='https://www.linkedin.com/in/harsh-kumar-kushwaha-a67338203?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app' " class="team_btn"><i
                                                         class="fab fa-linkedin-in ico"></i></button>
-                                                <button onclick="location.href='' " class="team_btn"><i
+                                                <button onclick="location.href='https://www.facebook.com/harsh.kushwaha.3975?mibextid=5Kh6FbEwYSVQBTpZ' " class="team_btn"><i
                                                         class="fab fa-facebook ico"></i></button>
-                                                <button onclick="location.href='https://www.instagram.com/prajjwal_jaiswal06?igsh=NGZlaXE5Mjd4bXpi' " class="team_btn"><i
+                                                <button onclick="location.href='https://www.instagram.com/harshkushwaha71?igsh=d3Bkbm9pYzZ3aHZz' " class="team_btn"><i
                                                         class="fab fa-instagram  ico"></i></button>
-                                                <button onclick="location.href='https://github.com/Prajjwaljai' " class="team_btn"><i
+                                                <button onclick="location.href='https://github.com/Harsh18k' " class="team_btn"><i
                                                         class="fab fa-github  ico"></i></button>
                                             </div>
+
                                         </div>
                                     </div>
                                 </div>
@@ -341,23 +340,23 @@
                                             <div class="team_desc" style="height:360px">
                                                 <img class="team_DP"
                                                     style="width: 200px; margin-left: 20%; object-fit: cover; height: 200px;"
-                                                    src="img/team/team_Head_2025/Head01.jpeg">
-                                                <t class="team_name">Prajjwal Jaiswal</t>
+                                                    src="img/team/team_Head_2025/Head08.jpg">
+                                                <t class="team_name">Shreya Pal</t>
                                                 <br>
-                                                <t class="team_post">Head of Research & Development Team</t>
+                                                <t class="team_post">Head of Content and Record Operations Team</t>
                                                 <p class="team_about" style="text-align: justify;">
-                                                    I’m Prajjwal Jaiswal, Head of R&D at Innovation and Incubation Cell, BIET Jhansi. 
-                                                    I lead innovative projects, mentor teams, and drive collaborations to turn ideas into impactful,
-                                                    real-world solutions.
+                                                    I’m Shreya Pal, a Full Stack Developer passionate about building intuitive web apps. 
+                                                    Skilled in DSA and creative writing, I love learning, innovating, and bringing impactful
+                                                    ideas to life through technology.
                                                 </p>
                                             <div class="team_social">
-                                                <button onclick="location.href='http://www.linkedin.com/in/prajjwal-jaiswal' " class="team_btn"><i
+                                                <button onclick="location.href='https://www.linkedin.com/in/shreya-pal-43876b25b' " class="team_btn"><i
                                                         class="fab fa-linkedin-in ico"></i></button>
                                                 <button onclick="location.href='' " class="team_btn"><i
                                                         class="fab fa-facebook ico"></i></button>
-                                                <button onclick="location.href='https://www.instagram.com/prajjwal_jaiswal06?igsh=NGZlaXE5Mjd4bXpi' " class="team_btn"><i
+                                                <button onclick="location.href='' " class="team_btn"><i
                                                         class="fab fa-instagram  ico"></i></button>
-                                                <button onclick="location.href='https://github.com/Prajjwaljai' " class="team_btn"><i
+                                                <button onclick="location.href='https://github.com/ShreyaPal08' " class="team_btn"><i
                                                         class="fab fa-github  ico"></i></button>
                                             </div>
                                         </div>
@@ -372,23 +371,21 @@
                                             <div class="team_desc" style="height:360px">
                                                 <img class="team_DP"
                                                     style="width: 200px; margin-left: 20%; object-fit: cover; height: 200px;"
-                                                    src="img/team/team_Head_2025/Head01.jpeg">
-                                                <t class="team_name">Prajjwal Jaiswal</t>
+                                                    src="img/team/team_Head_2025/Head09.png">
+                                                <t class="team_name">Nikhil Kesarwani</t>
                                                 <br>
-                                                <t class="team_post">Head of Research & Development Team</t>
+                                                <t class="team_post">Head of Innovation and IP Coordination Team</t>
                                                 <p class="team_about" style="text-align: justify;">
-                                                    I’m Prajjwal Jaiswal, Head of R&D at Innovation and Incubation Cell, BIET Jhansi. 
-                                                    I lead innovative projects, mentor teams, and drive collaborations to turn ideas into impactful,
-                                                    real-world solutions.
+                                                    I’m Nikhil....
                                                 </p>
                                             <div class="team_social">
-                                                <button onclick="location.href='http://www.linkedin.com/in/prajjwal-jaiswal' " class="team_btn"><i
+                                                <button onclick="location.href='https://www.linkedin.com/in/nikhil-kesarwani-91504b253?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app' " class="team_btn"><i
                                                         class="fab fa-linkedin-in ico"></i></button>
-                                                <button onclick="location.href='' " class="team_btn"><i
+                                                <button onclick="location.href='https://www.facebook.com/nikhil.kesarwani.9085' " class="team_btn"><i
                                                         class="fab fa-facebook ico"></i></button>
-                                                <button onclick="location.href='https://www.instagram.com/prajjwal_jaiswal06?igsh=NGZlaXE5Mjd4bXpi' " class="team_btn"><i
+                                                <button onclick="location.href='https://www.instagram.com/kersarwani_nikhil?igsh=ODA1NTc5OTg5Nw==' " class="team_btn"><i
                                                         class="fab fa-instagram  ico"></i></button>
-                                                <button onclick="location.href='https://github.com/Prajjwaljai' " class="team_btn"><i
+                                                <button onclick="location.href='https://github.com/Nikhil-kesarwani111' " class="team_btn"><i
                                                         class="fab fa-github  ico"></i></button>
                                             </div>
                                         </div>
@@ -2648,6 +2645,7 @@
 </body>
 
 </html>
+
 
 
 
