--- a/about.html
+++ b/about.html
@@ -70,10 +70,6 @@
                                 style="background:white;color:rgb(255,122,0);font-weight: bold;">About Us
                             </div>
                             <h1 id="mission" class="display-6 mb-5" style="color: white;">Mission</h1>
-                            <!-- <div class="bg-light border-bottom border-5 border-primary rounded p-4 mb-4">
-                            <p class="text-dark mb-2">Aliqu diam amet diam et eos. Clita erat ipsum et lorem sed stet lorem sit clita duo justo erat amet</p>
-                            <span class="text-primary">Jhon Doe, Founder</span>
-                        </div> -->
                             <p class="mb-5" style="color: white;">IIC will focus on creating complete ecosystem which
                                 will foster the culture
                                 of Innovation across all educational institutions from ideas generation to
@@ -104,16 +100,14 @@
     <!-- About End -->
 
 
-
-
-
     <div class="team_cont">
         <div class="teams_desc" style="text-align: center;">
             <h1 id="ourteam" class=" teams_name" style="font-size: 60px;font-weight: bolder;"><span
                     style="color: rgb(255,122,0);">Our</span>
-                Team</h1>
+            Team</h1>
             <p class="mb-5" style="color: white;">A team of motivated individuals with an inclination towards innovation
-                and entrepreneurial vigour.</p>
+                and entrepreneurial vigour.
+            </p>
         </div>
         <section class="team">
              <!--TE-->
@@ -411,21 +405,23 @@
                                         <div class="team_desc" style="height:360px">
                                             <img class="team_DP"
                                                 style="width: 200px; margin-left: 20%; object-fit: cover; height: 200px;"
-                                                src="img/PP 3/DP Abhishek.jpg">
-                                            <t class="team_name">Abhishek Srivastava</t>
+                                                src="img/">
+                                            <t class="team_name">Anjali VP Upadhyay</t>
                                             <br>
-                                            <t class="team_post"> Head of Research & Development</t>
+                                            <t class="team_post">Advisory Board Member of Research & Development Team</t>
                                             <p class="team_about" style="text-align: justify;">
-                                                I'm Abhishek Srivastava, Creative & Tech Enthusiast, skilled in frontend
-                                                and Backend Technology.
-                                                Master in Java.
-                                                Currently chasing my dreams to be the best.
+                                               I’m an enthusiastic learner with experience in web development and Python programming.
+                                               I enjoy solving problems, working collaboratively, and approaching challenges with creativity and clear communication.
                                             </p>
                                             <div class="team_social">
-                                                <button class="team_btn"><i class="fab fa-linkedin-in ico"></i></button>
-                                                <button class="team_btn"><i class="fab fa-facebook ico"></i></button>
-                                                <button class="team_btn"><i class="fab fa-instagram  ico"></i></button>
-                                                <button class="team_btn"><i class="fab fa-github  ico"></i></button>
+                                                <button onclick="location.href='https://www.linkedin.com/in/anjali-upadhyay-721435268?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app' " class="team_btn"><i
+                                                        class="fab fa-linkedin-in ico"></i></button>
+                                                <button onclick="location.href='' " class="team_btn"><i
+                                                        class="fab fa-facebook ico"></i></button>
+                                                <button onclick="location.href='https://www.instagram.com/_anjali.upadhyay?igsh=MWpudXI3MTdkc3ppZw==' " class="team_btn"><i
+                                                        class="fab fa-instagram  ico"></i></button>
+                                                <button onclick="location.href='https://github.com/AnjaliUp237' " class="team_btn"><i
+                                                        class="fab fa-github  ico"></i></button>
                                             </div>
                                         </div>
 
@@ -2645,6 +2641,7 @@
 </body>
 
 </html>
+
 
 
 
