--- a/about.html
+++ b/about.html
@@ -405,7 +405,7 @@
                                         <div class="team_desc" style="height:360px">
                                             <img class="team_DP"
                                                 style="width: 200px; margin-left: 20%; object-fit: cover; height: 200px;"
-                                                src="img/">
+                                                src="img/team/team_adv_mem_2025/Anjali Upadhyay.jpg">
                                             <t class="team_name">Anjali VP Upadhyay</t>
                                             <br>
                                             <t class="team_post">Advisory Board Member of Research & Development Team</t>
@@ -2641,6 +2641,7 @@
 </body>
 
 </html>
+
 
 
 
