--- a/about.html
+++ b/about.html
@@ -598,7 +598,7 @@
                                     <br>
                                     <t class="team_post">Advisory Board Member of Talent Development & Opportunities Team</t>
                                     <p class="team_about" style="text-align: justify;">
-                                        As an Advisory Board Member of the Talent Development and Opportunities team, I guide strategic initiatives,
+                                        As an Advisory Board Member of this team, I guide strategic initiatives,
                                         mentor students, and foster career growth—empowering future leaders through skill enhancement and opportunity creation.
                                     </p>
                                     <div class="team_social">
@@ -2502,6 +2502,7 @@
 </body>
 
 </html>
+
 
 
 
