--- a/about.html
+++ b/about.html
@@ -474,53 +474,48 @@
         </div>
 
         <!-- Aswani -->
-        <div class="item">
-          <div class="box-b staff">
-            <div class="team_card" style="text-align: center; padding-top: 15px;">
-              <div class="team_desc" style="height:360px">
-                <img class="team_DP"
-                  style="width: 200px; margin-left: 20%; object-fit: cover; height: 200px;"
-                  src="img/team/team_adv_mem_2025/Aswani Singh Punder.JPG">
-                <t class="team_name">Aswani Singh Punder</t><br>
-                <t class="team_post">Advisory Board Member of Event Management Team</t>
-                <p class="team_about" style="text-align: justify;">
-                  I’m Aswani, a final-year Electrical Engineering student, driven by focus and ambition.
-                  Academics, sports, and activities have shaped my confidence, discipline, and teamwork for future leadership and success.
-                </p>
-                <div class="team_social">
-                  <button onclick="location.href='https://www.linkedin.com/in/aswanisinghpunder'" class="team_btn"><i class="fab fa-linkedin-in ico"></i></button>
-                  <button class="team_btn"><i class="fab fa-facebook ico"></i></button>
-                  <button onclick="location.href='https://www.instagram.com/aswani_punder'" class="team_btn"><i class="fab fa-instagram ico"></i></button>
-                  <button class="team_btn"><i class="fab fa-github ico"></i></button>
-                </div>
+        <div class="flex flex-wrap justify-center gap-6">
+          <!-- Aswani Card -->
+          <div class="max-w-xs bg-white rounded-2xl shadow-lg overflow-visible text-center p-6">
+            <div class="relative -mt-12">
+              <div class="w-24 h-24 mx-auto rounded-full border-4 border-white bg-orange-500 overflow-hidden">
+                <img src="aswani.jpg" alt="Aswani Singh Punder" class="object-cover w-full h-full">
               </div>
+            </div>
+            <h3 class="mt-4 text-xl font-bold text-gray-900">Aswani Singh Punder</h3>
+            <p class="text-sm font-medium text-gray-600 mb-3">Advisory Board Member of Event Management Team</p>
+            <p class="text-sm text-gray-700">
+              I’m Aswani, a final-year Electrical Engineering student, driven by focus and ambition. Academics, sports, and activities have shaped my confidence, discipline, and teamwork for future leadership and success.
+            </p>
+            <div class="flex justify-center gap-3 mt-4">
+              <a href="#" class="text-orange-500 text-xl"><i class="fab fa-linkedin"></i></a>
+              <a href="#" class="text-orange-500 text-xl"><i class="fab fa-facebook"></i></a>
+              <a href="#" class="text-orange-500 text-xl"><i class="fab fa-instagram"></i></a>
+              <a href="#" class="text-orange-500 text-xl"><i class="fab fa-github"></i></a>
+            </div>
+          </div>
+        
+          <!-- Vikrant Card -->
+          <div class="max-w-xs bg-white rounded-2xl shadow-lg overflow-visible text-center p-6">
+            <div class="relative -mt-12">
+              <div class="w-24 h-24 mx-auto rounded-full border-4 border-white bg-orange-500 overflow-hidden">
+                <img src="vikrant.jpg" alt="Vikrant Akarsh Verma" class="object-cover w-full h-full">
+              </div>
+            </div>
+            <h3 class="mt-4 text-xl font-bold text-gray-900">Vikrant Akarsh Verma</h3>
+            <p class="text-sm font-medium text-gray-600 mb-3">Advisory Board Member of Marketing Team</p>
+            <p class="text-sm text-gray-700">
+              I’m a Creative Director passionate about visual storytelling. Skilled in Adobe Premiere Pro, I craft engaging, emotion-driven videos—turning ideas into compelling visual experiences that connect with audiences.
+            </p>
+            <div class="flex justify-center gap-3 mt-4">
+              <a href="#" class="text-orange-500 text-xl"><i class="fab fa-linkedin"></i></a>
+              <a href="#" class="text-orange-500 text-xl"><i class="fab fa-facebook"></i></a>
+              <a href="#" class="text-orange-500 text-xl"><i class="fab fa-instagram"></i></a>
+              <a href="#" class="text-orange-500 text-xl"><i class="fab fa-github"></i></a>
             </div>
           </div>
         </div>
 
-        <!-- Vikrant -->
-        <div class="item">
-          <div class="box-b staff">
-            <div class="team_card" style="text-align: center; padding-top: 15px;">
-              <div class="team_desc" style="height:360px">
-                <img class="team_DP"
-                  style="width: 200px; margin-left: 20%; object-fit: cover; height: 200px;"
-                  src="img/team/team_adv_mem_2025/vikrant verma.png">
-                <t class="team_name">Vikrant Akarsh Verma</t><br>
-                <t class="team_post">Advisory Board Member of Marketing Team</t>
-                <p class="team_about" style="text-align: justify;">
-                  I’m a Creative Director passionate about visual storytelling. Skilled in Adobe Premiere Pro, I craft engaging, emotion-driven videos—turning ideas into compelling visual experiences that connect with audiences.
-                </p>
-                <div class="team_social">
-                  <button onclick="location.href='https://www.linkedin.com/in/vikrant-verma-21a57025b'" class="team_btn"><i class="fab fa-linkedin-in ico"></i></button>
-                  <button class="team_btn"><i class="fab fa-facebook ico"></i></button>
-                  <button onclick="location.href='https://www.instagram.com/vikrant_.24'" class="team_btn"><i class="fab fa-instagram ico"></i></button>
-                  <button class="team_btn"><i class="fab fa-github ico"></i></button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
 
         <!-- Harshada -->
         <div class="item">
@@ -2446,6 +2441,7 @@
 </body>
 
 </html>
+
 
 
 
