--- a/about.html
+++ b/about.html
@@ -626,6 +626,37 @@
                         </div>
                     </div>
                     <!-- Team Card Ends -->
+                <!-- Team Card  Starts -->
+                    <div class="item">
+                        <div class="box-b staff">
+                            <div class="team_card" style="text-align: center;padding-top: 15px;">
+                                <br><br><br><br><br><br>
+                                <div class="team_desc" style="height:340px">
+                                    <img class="team_DP"
+                                        style="width: 200px; margin-left: 20%; object-fit: cover; height: 200px;"
+                                        src="img/PF 2/Anjali Bharti.jpg">
+                                    <t class="team_name">Anjali Bharti</t>
+                                    <br>
+                                    <t class="team_post">Advisory Board Member of Idea Incubators Team</t>
+                                    <p class="team_about" style="text-align: justify;">
+                                        I'm Anjali...
+                                    </p>
+                                    <div class="team_social">
+                                        <button onclick="location.href='http://www.linkedin.com/in/anjali-bharti-8a60a625a' " class="team_btn"><i
+                                                class="fab fa-linkedin-in ico"></i></button>
+                                        <button onclick="location.href='https://www.facebook.com/profile.php?id=100089075665895' " class="team_btn"><i
+                                                class="fab fa-facebook ico"></i></button>
+                                        <button onclick="location.href='https://www.instagram.com/anjali_bharti118/' " class="team_btn"><i
+                                                class="fab fa-instagram  ico"></i></button>
+                                        <button onclick="location.href='https://github.com/anjalibharti118' " class="team_btn"><i
+                                                class="fab fa-github  ico"></i></button>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Team Card Ends -->
                   <!-- Team Card  Starts -->
                     <div class="item">
                         <div class="box-b staff">
@@ -639,8 +670,8 @@
                                     <br>
                                     <t class="team_post">Advisory Board Member of Content & Record Operations Team</t>
                                     <p class="team_about" style="text-align: justify;">
-                                        I’m Vidushi Chauhan, a creative content writer with good knowledge of electrical engineering. I enjoy writing meaningful and easy-to-understand content that connects with people. 
-                                        My interest in writing and my understanding of core electrical concepts help me explain ideas clearly and effectively.                                    </p>
+                                        I’m Vidushi Chauhan, a creative content writer with a strong grasp of electrical engineering. 
+                                        I craft clear, meaningful, and easy-to-understand content that effectively connects with readers.
                                     <div class="team_social">
                                         <button onclick="location.href='https://www.linkedin.com/in/vidushi-chauhan31?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3Bnx6Awy%2B%2FSuOXvVzVCJfJ%2BA%3D%3D' " class="team_btn"><i
                                                 class="fab fa-linkedin-in ico"></i></button>
@@ -2572,6 +2603,7 @@
 </body>
 
 </html>
+
 
 
 
